[package]
name = "code-executor"
version = "2.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akagiyuu/code-executor"
homepage = "https://github.com/akagiyuu/code-executor"
description = """
A library designed for the backend of competitive programming platforms
"""

[dependencies]
cgroups-rs = "0.3.4"
libseccomp = "0.4.0"
state-shift = "2.1.1"
thiserror = "2.0.9"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
rstest = "0.25.0"
