[package]
name = "code-executor"
version = "2.4.2"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akagiyuu/code-executor"
homepage = "https://github.com/akagiyuu/code-executor"
description = """
A library designed for the backend of competitive programming platforms
"""

[dependencies]
cached = "0.55.1"
cgroups-rs = "0.3.4"
libseccomp = "0.4.0"
state-shift = "2.1.1"
thiserror = "2.0.9"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
bstr = "1.12.0"
rstest = "0.25.0"
