[package]
name = "code-executor"
version = "2.6.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akagiyuu/code-executor"
homepage = "https://github.com/akagiyuu/code-executor"
description = """
A library designed for the backend of competitive programming platforms
"""

[dependencies]
cached = "0.55.1"
cgroups-rs = "0.3.4"
thiserror = "2.0.9"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
bstr = "1.12.0"
rstest = "0.25.0"
